--- a/.github/workflows/build-pr.yml
+++ b/.github/workflows/build-pr.yml
@@ -33,7 +33,9 @@ jobs:
       - name: Setup .NET
         uses: actions/setup-dotnet@v3
         with:
-          dotnet-version: 8
+          dotnet-version: |
+            8
+            7
       - name: Build Project
         run: dotnet build
   test_pr:
@@ -44,7 +46,9 @@ jobs:
       - name: Setup .NET
         uses: actions/setup-dotnet@v3
         with:
-          dotnet-version: 8
+          dotnet-version: |
+            8
+            7
       - name: Test Project
         run: dotnet test
   benchmark_pr:
@@ -57,7 +61,9 @@ jobs:
       - name: Setup .NET
         uses: actions/setup-dotnet@v3
         with:
-          dotnet-version: 8
+          dotnet-version: |
+            8
+            7
       - name: Benchmark Project
         run: dotnet run -c Release --project benchmarks/HyperSharp.Benchmarks.csproj
       - name: Output Test Results
