--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -33,7 +33,9 @@ jobs:
     - name: Setup .NET
       uses: actions/setup-dotnet@v3
       with:
-        dotnet-version: 8
+        dotnet-version: |
+          8
+          7
     - name: Install DocFX
       run: dotnet tool update -g docfx --prerelease
       continue-on-error: true
