--- a/tools/MakeShiftSourceGeneration/MakeShiftSourceGenerator.targets
+++ b/tools/MakeShiftSourceGeneration/MakeShiftSourceGenerator.targets
@@ -53,7 +53,7 @@ namespace HyperSharp.Protocol
             string? dotnetRoot = Environment.GetEnvironmentVariable("DOTNET_ROOT");
             if (dotnetRoot is null)
             {
-                BuildEngine.LogErrorEvent(new BuildErrorEventArgs("MakeShiftSourceGenerator", "DotNetRootNotFound", "The environment variable DOTNET_ROOT was not found.", "MakeShiftSourceGenerator.targets", 0, 0, 0, 0));
+                Log.LogError("DOTNET_ROOT is not set.");
                 return false;
             }
 
@@ -63,33 +63,33 @@ namespace HyperSharp.Protocol
                 string msBuildDependenciesJsonPath = Path.Combine(sdkVersion, "Microsoft.NETCore.App.runtimeconfig.json");
                 if (!File.Exists(msBuildDependenciesJsonPath))
                 {
-                    BuildEngine.LogWarningEvent(new BuildWarningEventArgs("MakeShiftSourceGenerator", "MsBuildDependenciesJsonNotFound", $"The file {msBuildDependenciesJsonPath} was not found.", "MakeShiftSourceGenerator.targets", 0, 0, 0, 0));
+                    Log.LogWarning($"Skipping '{sdkVersion}' because '{msBuildDependenciesJsonPath}' does not exist."});
                     continue;
                 }
 
                 JsonDocument? jsonDocument = JsonDocument.Parse(File.ReadAllText(msBuildDependenciesJsonPath));
                 if (jsonDocument is null)
                 {
-                    BuildEngine.LogWarningEvent(new BuildWarningEventArgs("MakeShiftSourceGenerator", "MsBuildDependenciesJsonNotParsed", $"The file {msBuildDependenciesJsonPath} could not be parsed.", "MakeShiftSourceGenerator.targets", 0, 0, 0, 0));
+                    Log.LogWarning($"Skipping '{sdkVersion}' because '{msBuildDependenciesJsonPath}' could not be parsed as JSON.");
                     continue;
                 }
 
                 // runtimeOptions.tfm
                 if (!jsonDocument.RootElement.TryGetProperty("runtimeOptions", out JsonElement runtimeOptions) || !runtimeOptions.TryGetProperty("tfm", out JsonElement tfm))
                 {
-                    BuildEngine.LogWarningEvent(new BuildWarningEventArgs("MakeShiftSourceGenerator", "MsBuildDependenciesJsonNotParsed", $"The file {msBuildDependenciesJsonPath} was missing the expected \"runtimeOptions.tfm\" property.", "MakeShiftSourceGenerator.targets", 0, 0, 0, 0));
+                    Log.LogWarning($"Skipping '{sdkVersion}' because '{msBuildDependenciesJsonPath}' does not contain a 'runtimeOptions.tfm' property.");
                     continue;
                 }
 
                 string? targetFrameworkMoniker = tfm.GetString();
                 if (targetFrameworkMoniker is null)
                 {
-                    BuildEngine.LogWarningEvent(new BuildWarningEventArgs("MakeShiftSourceGenerator", "MsBuildDependenciesJsonNotParsed", $"The file {msBuildDependenciesJsonPath} was \"runtimeOptions.tfm\" property has an unexpected null value.", "MakeShiftSourceGenerator.targets", 0, 0, 0, 0));
+                    Log.LogWarning($"Skipping '{sdkVersion}' because '{msBuildDependenciesJsonPath}' the 'runtimeOptions.tfm' property contains a null value.");
                     continue;
                 }
                 else if (!targetedFrameworks.Any(framework => framework.StartsWith(targetFrameworkMoniker, StringComparison.OrdinalIgnoreCase)))
                 {
-                    BuildEngine.LogDebugEvent(new BuildMessageEventArgs($"Skipping target framework {targetFrameworkMoniker} because it is not targeted by the project.", "MakeShiftSourceGenerator.targets", "MakeShiftSourceGenerator", MessageImportance.Low));
+                    Log.LogMessage(MessageImportance.Low, $"Skipping '{sdkVersion}' because '{msBuildDependenciesJsonPath}' the 'runtimeOptions.tfm' property contains a value that is not targeted by the project.");
                     continue;
                 }
 
