--- a/src/HyperSharp.SourceGeneration/HyperSharp.SourceGeneration.csproj
+++ b/src/HyperSharp.SourceGeneration/HyperSharp.SourceGeneration.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.CommandLine" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Net.Http.Headers" Version="2.2.8" />
     <PackageReference Include="NuGet.Frameworks" Version="6.7.0" />
   </ItemGroup>
 </Project>
