--- a/.github/workflows/build-pr.yml
+++ b/.github/workflows/build-pr.yml
@@ -65,7 +65,7 @@ jobs:
             8
             7
       - name: Benchmark Project
-        run: dotnet run -c Release --project benchmarks/HyperSharp.Benchmarks.csproj
+        run: dotnet run -c Release --project benchmarks/HyperSharp.Benchmarks.csproj --framework net8.0
       - name: Output Test Results
         id: test-results
         run: |
