--- a/.github/workflows/build-commit.yml
+++ b/.github/workflows/build-commit.yml
@@ -47,6 +47,29 @@ jobs:
             7
       - name: Test Project
         run: dotnet test
+  document_commit:
+    name: Document Commit
+    runs-on: self-hosted
+    needs: test_commit
+    permissions:
+      pages: write
+      id-token: write
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    steps:
+      - name: Install DocFX
+        run: dotnet tool update -g docfx --prerelease
+        continue-on-error: true
+      - name: Build documentation
+        run: docfx docs/docfx.json
+      - name: Upload GitHub Pages artifact
+        uses: actions/upload-pages-artifact@v1
+        with:
+          path: ./docs/_site/
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v1
   benchmark_commit:
     name: Benchmark Commit
     runs-on: self-hosted
