--- a/src/HyperSharp.SourceGeneration/HyperSharp.SourceGeneration.csproj
+++ b/src/HyperSharp.SourceGeneration/HyperSharp.SourceGeneration.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <GenerateDocumentationFile>false</GenerateDocumentationFile>
+    <IsPackable>false</IsPackable>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
