--- a/src/HyperSharp/HyperSharp.csproj
+++ b/src/HyperSharp/HyperSharp.csproj
@@ -3,6 +3,7 @@
     <OutputType>Library</OutputType>
     <Description>A C# implementation of the HTTP 1.1 protocol.</Description>
     <PackageId>OoLunar.HyperSharp</PackageId>
+    <IsPackable>true</IsPackable>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="../HyperSharp.Results/HyperSharp.Results.csproj" />
