--- a/src/HyperSharp/HyperSharp.csproj
+++ b/src/HyperSharp/HyperSharp.csproj
@@ -1,9 +1,10 @@
-﻿<Project Sdk="Microsoft.NET.Sdk" InitialTargets="Generate">
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Library</OutputType>
     <Description>A C# implementation of the HTTP 1.1 protocol.</Description>
     <PackageId>OoLunar.HyperSharp</PackageId>
     <IsPackable>true</IsPackable>
+    <ExecutableCached Condition="Exists('$(ProjectRoot)/src/HyperSharp.SourceGeneration/bin/Debug/net8.0/HyperSharp.SourceGeneration')">true</ExecutableCached>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="../HyperSharp.Results/HyperSharp.Results.csproj" />
@@ -14,7 +15,8 @@
     <PackageReference Include="System.IO.Pipelines" Version="7.0.0" />
     <PackageReference Include="Ulid" Version="1.3.0" />
   </ItemGroup>
-  <Target Name="Generate">
-    <Exec Command="dotnet run --project $(ProjectRoot)/src/HyperSharp.SourceGeneration/HyperSharp.SourceGeneration.csproj -- --targetFrameworks='$(TargetFrameworks)'" WorkingDirectory="$(ProjectRoot)/src/HyperSharp/" />
+  <Target Name="Generate" BeforeTargets="DispatchToInnerBuilds">
+    <Exec Condition="$(ExecutableCached) == true" Command="$(ProjectRoot)/src/HyperSharp.SourceGeneration/bin/Debug/net8.0/HyperSharp.SourceGeneration --targetFrameworks='$(TargetFrameworks)'"                WorkingDirectory="$(ProjectRoot)/src/HyperSharp/" />
+    <Exec Condition="$(ExecutableCached) != true" Command="dotnet run --project $(ProjectRoot)/src/HyperSharp.SourceGeneration/HyperSharp.SourceGeneration.csproj -- --targetFrameworks='$(TargetFrameworks)'"  WorkingDirectory="$(ProjectRoot)/src/HyperSharp/" />
   </Target>
 </Project>
