--- a/.editorconfig
+++ b/.editorconfig
@@ -6,20 +6,16 @@ root = true
 # All files
 [*]
 indent_style = space
+charset = utf-8
 
 # XML project files
-[*.{csproj,vbproj,vcxproj,vcxproj.filters,proj,projitems,shproj}]
-indent_size = 2
-
-# XML config files
-[*.{props,targets,ruleset,config,nuspec,resx,vsixmanifest,vsct}]
+[*.{config,csproj,nuspec,proj,projitems,props,resx,ruleset,shproj,targets,vbproj,vcxproj,vcxproj.filters,vsct,vsixmanifest}]
 indent_size = 2
 
 # Code files
 [*.cs]
 indent_size = 4
 insert_final_newline = true
-charset = utf-8
 
 ###############################
 # .NET Coding Conventions     #
