--- a/.github/workflows/build-commit.yml
+++ b/.github/workflows/build-commit.yml
@@ -58,11 +58,17 @@ jobs:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     steps:
-      - name: Install DocFX
-        run: dotnet tool update -g docfx --prerelease
-        continue-on-error: true
-      - name: Build documentation
-        run: docfx docs/docfx.json
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v3
+        with:
+          dotnet-version: |
+            8
+            7
+      - name: Build Project
+        run: |
+          dotnet build
+          dotnet tool update -g docfx --prerelease
+          docfx docs/docfx.json
       - name: Upload GitHub Pages artifact
         uses: actions/upload-pages-artifact@v1
         with:
