--- a/.github/workflows/build-commit.yml
+++ b/.github/workflows/build-commit.yml
@@ -19,7 +19,7 @@ env:
 jobs:
   build_commit:
     name: Build Commit
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     if: "!contains(format('{0} {1}', github.event.head_commit.message, github.event.pull_request.title), '[ci-skip]')"
     steps:
       - name: Checkout
