--- a/.github/workflows/build-commit.yml
+++ b/.github/workflows/build-commit.yml
@@ -36,7 +36,7 @@ jobs:
         run: dotnet build
   test_commit:
     name: Test Commit
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     needs: build_commit
     steps:
       - name: Setup .NET
@@ -49,7 +49,7 @@ jobs:
         run: dotnet test
   document_commit:
     name: Document Commit
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     needs: test_commit
     permissions:
       pages: write
@@ -78,7 +78,7 @@ jobs:
         uses: actions/deploy-pages@v1
   benchmark_commit:
     name: Benchmark Commit
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     needs: test_commit
     permissions:
       contents: write
