--- a/.github/workflows/build-pr.yml
+++ b/.github/workflows/build-pr.yml
@@ -40,7 +40,7 @@ jobs:
         run: dotnet build
   test_pr:
     name: "Test PR #${{ github.event.pull_request.number }}"
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     needs: build_pr
     steps:
       - name: Setup .NET
@@ -53,7 +53,7 @@ jobs:
         run: dotnet test
   benchmark_pr:
     name: "Benchmark PR #${{ github.event.pull_request.number }}"
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     needs: test_pr
     permissions:
       contents: write
