--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,8 +38,6 @@ jobs:
           mkdir build
           dotnet pack -c Release -o build /p:Version=${{ github.event.release.tag_name }}
           dotnet nuget push "build/*" --skip-duplicate -k ${{ secrets.NUGET_ORG_API_KEY }} -s https://api.nuget.org/v3/index.json
-          dotnet tool update -g docfx --prerelease
-          docfx docs/docfx.json
       - name: Upload NuGet packages to GitHub Actions
         uses: actions/upload-artifact@v3
         with:
@@ -54,8 +52,8 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           omitNameDuringUpdate: true # We don't want to update the name of the release.
           omitBodyDuringUpdate: true # We don't want to update the body of the release.
-  document_commit:
-    name: Document Commit
+  document_release:
+    name: Document Release
     runs-on: ubuntu-latest
     needs: publish_release
     permissions:
@@ -65,6 +63,19 @@ jobs:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v3
+        with:
+          dotnet-version: |
+            8
+            7
+      - name: Build Project
+        run: |
+          dotnet build
+          dotnet tool update -g docfx --prerelease
+          docfx docs/docfx.json
       - name: Upload GitHub Pages artifact
         uses: actions/upload-pages-artifact@v1
         with:
@@ -76,6 +87,7 @@ jobs:
     name: Test Release
     runs-on: "self-hosted"
     if: "!contains(github.event.head_commit.message, '[ci-skip]') && github.ref_name == 'master' && github.event_name == 'push'"
+    needs: publish_release
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -88,10 +100,7 @@ jobs:
       - name: Publish NuGet packages
         run: |
           mkdir build
-          dotnet build -c Release
           dotnet pack -c Release -o build
-          dotnet tool update -g docfx --prerelease
-          docfx docs/docfx.json
       - name: Upload NuGet packages to GitHub Actions
         uses: actions/upload-artifact@v3
         with:
