--- a/.editorconfig
+++ b/.editorconfig
@@ -6,26 +6,43 @@ root = true
 # All files
 [*]
 indent_style = space
-charset = utf-8
 
 # XML project files
-[*.{config,csproj,nuspec,proj,projitems,props,resx,ruleset,shproj,targets,vbproj,vcxproj,vcxproj.filters,vsct,vsixmanifest}]
+[*.{csproj,vbproj,vcxproj,vcxproj.filters,proj,projitems,shproj}]
+indent_size = 2
+
+# XML config files
+[*.{props,targets,ruleset,config,nuspec,resx,vsixmanifest,vsct}]
 indent_size = 2
 
 # Code files
 [*.cs]
 indent_size = 4
 insert_final_newline = true
+charset = utf-8
 
 ###############################
 # .NET Coding Conventions     #
 ###############################
 [*.{cs,vb}]
 
+# Suppress CS1591: Missing XML comment for publicly visible type or member
+dotnet_diagnostic.CS1591.severity = none
+
+# Suppress IDE0058: Expression value is never used
+dotnet_diagnostic.IDE0058.severity = none
+
+# Disable require license header
+dotnet_diagnostic.IDE0073.severity = none
+
 # Organize usings
 dotnet_sort_system_directives_first = true:error
+
 # Using directive is unnecessary.
 dotnet_diagnostic.IDE0005.severity = error
+
+# Use regular consturctors over primary constructors
+csharp_style_prefer_primary_constructors = false
 
 # Yell at people when they don't include the file header template
 dotnet_diagnostic.IDE0073.severity = error
@@ -69,9 +86,6 @@ dotnet_style_prefer_conditional_expression_over_return = true:error
 
 # Style Definitions
 dotnet_naming_style.pascal_case_style.capitalization = pascal_case
-dotnet_naming_style.camel_case_with_underscore.capitalization = camel_case
-dotnet_naming_style.camel_case_with_underscore.required_prefix = _
-dotnet_naming_style.camel_case_with_underscore.word_separator =
 
 # Use PascalCase for constant fields
 dotnet_naming_rule.constant_fields_should_be_pascal_case.severity = error
@@ -98,18 +112,8 @@ dotnet_naming_style.async_suffix.capitalization = pascal_case
 dotnet_naming_symbols.async_methods.applicable_kinds = method
 dotnet_naming_symbols.async_methods.required_modifiers = async
 
-# Enforce private or internal properties/fields to start with a '_' and be camelcased
-dotnet_naming_rule.camel_case_private_internal_fields_with_underscore.severity = suggestion
-dotnet_naming_rule.camel_case_private_internal_fields_with_underscore.symbols = private_internal_fields
-dotnet_naming_rule.camel_case_private_internal_fields_with_underscore.style = camel_case_with_underscore
-dotnet_naming_symbols.private_internal_fields.applicable_kinds = field, property
-dotnet_naming_symbols.private_internal_fields.applicable_accessibilities = private, internal
-dotnet_naming_symbols.private_internal_fields.required_modifiers = private, internal
-dotnet_naming_symbols.private_internal_fields.required_prefix = _
-dotnet_naming_symbols.private_internal_fields.required_style = camel_case
-
 # Don't force namespaces to match their folder names
-dotnet_diagnostic.IDE0130.severity = none
+dotnet_style_namespace_match_folder = false
 
 ###############################
 # C# Coding Conventions       #
