--- a/src/HyperSharp.Responders/HyperSharp.Responders.csproj
+++ b/src/HyperSharp.Responders/HyperSharp.Responders.csproj
@@ -7,7 +7,7 @@
     <IsPackable>true</IsPackable>
   </PropertyGroup>
   <ItemGroup>
-    <ProjectReference Include="../HyperSharp.Results/HyperSharp.Results.csproj" />
+    <ProjectReference Include="$(ProjectRoot)/src/HyperSharp.Results/HyperSharp.Results.csproj" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.1" />
   </ItemGroup>
