--- a/tests/HyperSharp.Tests.csproj
+++ b/tests/HyperSharp.Tests.csproj
@@ -1,14 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-    <Nullable>enable</Nullable>
     <IsTestProject>true</IsTestProject>
     <GenerateDocumentationFile>false</GenerateDocumentationFile>
   </PropertyGroup>
   <ItemGroup>
-    <ProjectReference Include="../src/HyperSharp/HyperSharp.csproj" />
-    <ProjectReference Include="../src/HyperSharp.Responders/HyperSharp.Responders.csproj" />
-    <ProjectReference Include="../src/HyperSharp.Results/HyperSharp.Results.csproj" />
+    <ProjectReference Include="$(ProjectRoot)/src/HyperSharp/HyperSharp.csproj" />
+    <ProjectReference Include="$(ProjectRoot)/src/HyperSharp.Responders/HyperSharp.Responders.csproj" />
+    <ProjectReference Include="$(ProjectRoot)/src/HyperSharp.Results/HyperSharp.Results.csproj" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0" />
     <PackageReference Include="MSTest.TestAdapter" Version="3.3.1" />
     <PackageReference Include="MSTest.TestFramework" Version="3.3.1" />
